# fastapi-study

./: .gitignore  README.md  pyproject.toml
week1/: homework.py  main.py
week2/pre/: cookie.py  example_data.py  extra_data_types.py  extra_model.py  fields.py  form.py  multi_params.py  nested.py  path_params.py  query_params.py  response_model.py  status_code.py
